--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-VUE_APP_URL=http://localhost:8080
-VUE_API_URL=http://dev.shop/storage
-VUE_APP_TITLE=V-Marketplace
+VUE_APP_URL = http://localhost:8080
+VUE_APP_API_URL = http://dev.shop/storage
+VUE_APP_AVATAR_URL = http://dev.shop/
+VUE_APP_TITLE = V-Marketplace
